--- a/index.html
+++ b/index.html
@@ -21,11 +21,22 @@
                 <span class="smenu">About Us</span>
                 <span class="smenu">Logistics</span>
             </div>
-            <div id="headercall"><i class="fas fa-id-badge"></i></div>
-            <div id="lmenu">a</div>
+            <div class="cs">
+
+                <div id="headercall"><i class="fas fa-id-badge"></i></div>
+                <div id="lmenu"><i class="fas fa-bars"></i></div>
+            </div>
         </div>
         <div id="scroll">
-            <div class="pages" id="home"></div>
+            <div class="pages" id="home">
+                <div id="name">Asian Granites</div>
+                <div class="cs1">
+
+                    <div id="company">The Comapny</div>
+                    <div id="intro"><p>The Journey of Asian Group began with the first plant in 2010 at Jalore, Rajasthan. Over the span of years, expanded industrial production with the second plant in Jalore in 2013 and diversified to Kishangarh in 2021.</p></div>
+                </div>
+                <div id="aboutbtn">Read More<i class="fas fa-arrow-right"></i></div>
+            </div>
             <div class="pages" id="catalog">
                 <div class="heading">
 
