--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="fixed"></div>
-    <div id="logo"></div>
+    <!-- <div id="logo"></div> -->
 
     <div id="container">
 
