--- a/index.html
+++ b/index.html
@@ -27,14 +27,22 @@
             </div>
 
             <div id="about">
+                <div id="dcompany"><span>The Company</span></div>
                 <div id="company"><p>The Journey of Asian Group began with the first plant in 2010 at Jalore, Rajasthan. Over the span of years, expanded industrial production with the second plant in Jalore in 2013 and diversified to Kishangarh in 2021.</p></div>
             </div>
 
+            <div id="banner">
+                <div class="banners" id="banner1"></div>
+                <div class="banners" id="banner2"></div>
+                <div class="banners" id="banner3"></div>
+            </div>
+
             <div class="pages" id="catalog">
+                <span class="headingfixed"><i class="fas fa-image"></i></span>
                 <div class="heading">
 
-                    <h1>catalog</h1>
-                    <hr>
+                    <h1>CATALOG</h1>
+                  
                 </div>
                 <div id="cat_container">
                     <div id="catcat">
