--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             </div>
 
             <div id="about">
+                <span class="headingfixed"><i class="far fa-address-card"></i></span>
                 <div id="dcompany"><span>The Company</span></div>
                 <div id="company"><p>The Journey of Asian Group began with the first plant in 2010 at Jalore, Rajasthan. Over the span of years, expanded industrial production with the second plant in Jalore in 2013 and diversified to Kishangarh in 2021.</p></div>
             </div>
@@ -61,7 +62,7 @@
             </div>
 
             <div id="contact">
-                <span class="headingfixed"><i class="fas fa-id-card-alt"></i></i></span>
+                <span class="headingfixed"><i class="fas fa-id-card-alt"></i></span>
                 <div class="heading" id="cthead">
 
                     <h1>Contact Us</h1>
