--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     Our strong operations team has partnered with experienced clearing and handling agents, transporters and forwarding agents to facilitate seamless connectivity from our factory to your warehouse.</p>
                     </div>
                     <div id="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3564.936099556537!2d74.85856111500661!3d26.682526083227206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396bf36ecb1cf991%3A0xf6a71efc5dce791a!2sAsian%20Granites!5e0!3m2!1sen!2sin!4v1628157400328!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3564.936099556537!2d74.85856111500661!3d26.682526083227206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396bf36ecb1cf991%3A0xf6a71efc5dce791a!2sAsian%20Granites!5e0!3m2!1sen!2sin!4v1628157400328!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen=""></iframe>
                 </div>
                 </div>
 
