--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <div id="homename">Asian Granites</div>
                
-                <div id="scrolldown"><span>Scroll Down</span><i class="fas fa-sort-down"></i></div>
+                <div id="scrolldown"><span>Scroll Down</span><i class="fas fa-chevron-circle-down" id="ddown"></i></div>
             </div>
 
             <div id="about">
