--- a/index.html
+++ b/index.html
@@ -12,9 +12,20 @@
 <body>
     <div id="container">
         <div id="nav">
-            <img src="assets/Lifa.png" alt="" id="navlogo">
-            <div id="name">Asian Granites</div>
-            <div id="menu"><i class="fas fa-bars"></i></div>
+            <div id="upper">
+                <img src="assets/Lifa.png" alt="" id="navlogo">
+                <div id="name">Asian Granites</div>
+                <div id="menu"><i class="fas fa-bars"></i></div>
+            </div>
+            <div id="lower">
+                <div class="navs"><i class="fas fa-house-user"></i> Home</div>
+                <div class="navs"><i class="fas fa-address-card"></i> About Us</div>
+                <div class="navs"><i class="fas fa-truck-loading"></i> Logistics</div>
+                <div class="navs"><i class="fas fa-images"></i> Catalog</div>
+                <div class="navs"><i class="fas fa-phone-square-alt"></i> Contact Us</div>
+                <div class="navs"><i class="fas fa-newspaper"></i> Social Media</div>
+            </div>
+            
         </div>
         <div id="scroll">
             <div id="home" class="pages">
