--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 <div id="menu"><i class="fas fa-bars"></i></div>
             </div>
             <div id="lower">
-                <div class="navs"><i class="fas fa-house-user"></i> Home</div>
-                <div class="navs"><i class="fas fa-address-card"></i> About Us</div>
-                <div class="navs"><i class="fas fa-truck-loading"></i> Logistics</div>
-                <div class="navs"><i class="fas fa-images"></i> Catalog</div>
-                <div class="navs"><i class="fas fa-phone-square-alt"></i> Contact Us</div>
-                <div class="navs"><i class="fas fa-newspaper"></i> Social Media</div>
+                <div class="navs" id="hbtn"><i class="fas fa-house-user"></i> Home</div>
+                <div class="navs" id="abtn"><i class="fas fa-address-card"></i> About Us</div>
+                <div class="navs" id="lbtn"><i class="fas fa-truck-loading"></i> Logistics</div>
+                <div class="navs" id="cbtn"><i class="fas fa-images"></i> Catalog</div>
+                <div class="navs" id="cobtn"><i class="fas fa-phone-square-alt"></i> Contact Us</div>
+                <div class="navs" id="sbtn"><i class="fas fa-newspaper"></i> Social Media</div>
             </div>
             
         </div>
